Agentforce/force-app/main/default/objects/OperationalOpportunity__c/OperationalOpportunity__c.object-meta.xml
<CustomObject>
    <description>AD - 275 The ability to capture an Operational Opportunity against an Account or Contract</description>
    <label>Operational Opportunity</label>
    <nameField>
        <label>Operational  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operational Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>