Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AD-276 The ability to capture an Operational Opportunity against an Account or Contract</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operational Opportunities</relationshipLabel>
    <relationshipName>Operational_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>