Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Account_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Sector__c</fullName>
    <description>Data Consolidation - sector for the related Account</description>
    <formula>TEXT( Account__r.OCS_Sector__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sector</label>
    <type>Text</type>
</CustomField>