Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>E2E-118	Operational Opportunity Line Item Build out</description>
    <label>Annual Revenue</label>
    <summarizedField>OperationalOpportunityLineItem__c.Amount__c</summarizedField>
    <summaryForeignKey>OperationalOpportunityLineItem__c.Operational_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>