Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Closed_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Closed_Last_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Last 12 Months</label>
    <type>Checkbox</type>
</CustomField>