Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commitments</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Historical Performance</fullName>
            </value>
            <value>
                <fullName>Reason Pending</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Solution Design</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Risk Diversity</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Financial Risk</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Unsuccessful tender</fullName>
            </value>
            <value>
                <fullName>OCS Merger</fullName>
            </value>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>Client Withdrew</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Duplicated</fullName>
            </value>
            <value>
                <fullName>Long Timeline</fullName>
            </value>
            <value>
                <fullName>No Relationship</fullName>
            </value>
            <value>
                <fullName>Not in Strategy</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Short Timeline</fullName>
            </value>
            <value>
                <fullName>Site Closure</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>