Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Closed_Value__c.field-meta.xml
<CustomField>
    <fullName>Closed_Value__c</fullName>
    <label>Closed Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>