Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-275 The ability to capture an Operational Opportunity against an Account or Contract</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Operational Opportunities</relationshipLabel>
    <relationshipName>Operational_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>