Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Count_of_Opp_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opp_Lines__c</fullName>
    <description>Count of Operational Opportunity Line Items</description>
    <label># Opp Lines</label>
    <summaryForeignKey>OperationalOpportunityLineItem__c.Operational_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>