Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Covid_19__c.field-meta.xml
<CustomField>
    <fullName>Covid_19__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covid 19</label>
    <type>Checkbox</type>
</CustomField>