Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Created_By_FullName__c.field-meta.xml
<CustomField>
    <fullName>Created_By_FullName__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <label>Created By</label>
    <type>Text</type>
</CustomField>