Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <description>Data consolidation - field to capture the name of the User who created the Operational Opportunity - used in reporting</description>
    <formula>CreatedBy.Full_Name__c</formula>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>