Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/GM_Percent__c.field-meta.xml
<CustomField>
    <fullName>GM_Percent__c</fullName>
    <formula>Gross_Margin__c/Annual_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>