Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <label>Gross Margin</label>
    <summarizedField>OperationalOpportunityLineItem__c.Gross_Margin__c</summarizedField>
    <summaryForeignKey>OperationalOpportunityLineItem__c.Operational_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>