Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <formula>Owner__r.Id = $User.Id</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>