Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Lead_Originator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Originator__c</fullName>
    <label>Lead Originator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>