Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/No_of_Contract_Variations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contract_Variations__c</fullName>
    <description>Populated by DLRS</description>
    <label># Contract Variations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>