Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Operational_Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>Operational_Opportunity_No__c</fullName>
    <displayFormat>OO-{000000}</displayFormat>
    <label>Operational Opportunity No</label>
    <type>AutoNumber</type>
</CustomField>