Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/OperationalOpp_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>OperationalOpp_CaseSafeID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <label>OperationalOpp CaseSafeID</label>
    <type>Text</type>
</CustomField>