Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <formula>TEXT(Owner__r.Business_Unit__c)</formula>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>