Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <formula>Owner__r.Full_Name__c</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>