Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Owner_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subteam__c</fullName>
    <formula>TEXT( Owner__r.Subteam__c )</formula>
    <label>Owner Subteam</label>
    <type>Text</type>
</CustomField>