Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <formula>TEXT(Owner__r.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>