Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/PVS_Sector__c.field-meta.xml
<CustomField>
    <fullName>PVS_Sector__c</fullName>
    <description>Identifies the Sector within the Business Unit</description>
    <label>PVS Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Destinations</fullName>
            </value>
            <value>
                <fullName>Industries</fullName>
            </value>
            <value>
                <fullName>Venues</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>