Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Service_Summary__c.field-meta.xml
<CustomField>
    <fullName>Service_Summary__c</fullName>
    <label>Service Summary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Biomedical Management Services</fullName>
            </value>
            <value>
                <fullName>Car Park Management</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Compliance Services</fullName>
            </value>
            <value>
                <fullName>Hard Services</fullName>
            </value>
            <value>
                <fullName>Horticulture</fullName>
            </value>
            <value>
                <fullName>Industrial Parking</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Management Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Soft Services</fullName>
            </value>
            <value>
                <fullName>Strategic Consulting</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>TFM</fullName>
            </value>
            <value>
                <fullName>VAS Specialized Services</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>