Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Service_Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_Summary_Text__c</fullName>
    <description>Populated by DLRS</description>
    <label>Service Summary</label>
    <type>TextArea</type>
</CustomField>