Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/System_Misaligned_Owner_Fields__c.field-meta.xml
<CustomField>
    <fullName>System_Misaligned_Owner_Fields__c</fullName>
    <description>Ticked when an Operational Opportunity&apos;s Ownership fields are misaligned. Used as trigger for Scheduled Flow.</description>
    <formula>OR(
TEXT(Corporate_Type__c) != TEXT(Owner__r.Corporate_Type__c),
TEXT(Business_Unit__c) != TEXT(Owner__r.Business_Unit__c)
)</formula>
    <inlineHelpText>System field</inlineHelpText>
    <label>System: Misaligned Owner Fields</label>
    <type>Checkbox</type>
</CustomField>