Agentforce/force-app/main/default/objects/OperationalOpportunity__c/fields/Won_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Won_Last_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Won Last 12 Months</label>
    <type>Checkbox</type>
</CustomField>