Agentforce/force-app/main/default/objects/OperationalOpportunity__c/validationRules/Award_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Award_Date_Before_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
NOT(ISPICKVAL( Stage__c , &quot;Prospect&quot;)),
 Start_Date__c &lt; Award_Date__c  )</errorConditionFormula>
    <errorDisplayField>Award_Date__c</errorDisplayField>
    <errorMessage>Award Date must be before the service Start Date</errorMessage>
</ValidationRule>