Agentforce/force-app/main/default/objects/OperationalOpportunity__c/validationRules/Award_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Award_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
ISNULL( Award_Date__c  )
)</errorConditionFormula>
    <errorDisplayField>Award_Date__c</errorDisplayField>
    <errorMessage>The Award Date must be populated</errorMessage>
</ValidationRule>