Agentforce/force-app/main/default/objects/OperationalOpportunity__c/validationRules/Prevent_Empty_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Empty_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
    ISBLANK(Owner__c)
)</errorConditionFormula>
    <errorDisplayField>Owner__c</errorDisplayField>
    <errorMessage>The Owner must be assigned</errorMessage>
</ValidationRule>