Agentforce/force-app/main/default/objects/OperationalOpportunity__c/validationRules/Prevent_Stage_Changes_On_Won_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Stage_Changes_On_Won_Opps</fullName>
    <active>false</active>
    <description>Prevents changes to Stage where Closed Won</description>
    <errorConditionFormula>AND(
    !$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
    ISPICKVAL(PRIORVALUE(Stage__c), &quot;Closed Won&quot;),
    NOT(ISPICKVAL(Stage__c, &quot;Closed Won&quot;))
)</errorConditionFormula>
    <errorMessage>Unable to make changes to the Stage where Opportunity is Closed Won</errorMessage>
</ValidationRule>