Agentforce/force-app/main/default/objects/OperationalOpportunity__c/validationRules/Start_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
ISNULL( Start_Date__c  ),
NOT(ISPICKVAL(  Stage__c ,&apos;Solution&apos;)),
NOT(ISPICKVAL( Stage__c ,&apos;Submitted&apos;)),
NOT(ISPICKVAL( Stage__c ,&apos;Closed Won&apos;)),
NOT(ISPICKVAL( Stage__c ,&apos;Closed Lost&apos;)),
NOT(ISPICKVAL( Stage__c ,&apos;Closed Withdrawn&apos;)))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please provide a Start Date</errorMessage>
</ValidationRule>