Agentforce/force-app/main/default/objects/OperationalOpportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Award_Date__c</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>Owner__c</columns>
    <columns>Owner_Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>