Agentforce/force-app/main/default/objects/OperationalOpportunity__c/listViews/My_Lost_Opportunities_This_FY.listView-meta.xml
<ListView>
    <fullName>My_Lost_Opportunities_This_FY</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Award_Date__c</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </filters>
    <filters>
        <field>Award_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Is_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Lost Opportunities - This FY</label>
</ListView>