Agentforce/force-app/main/default/objects/OperationalOpportunity__c/listViews/My_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Open_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Award_Date__c</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Closed Withdrawn</value>
    </filters>
    <filters>
        <field>Is_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>00 - My Open Opportunities</label>
</ListView>